--- a/style.css
+++ b/style.css
@@ -28,29 +28,18 @@ a:active {
   flex-direction: column;
 }
 
-@media only screen and (min-width: 768px) {
-  .footer_container {
-    display: flex;
-    flex-direction: row;
-  }
-  .footer_column {
-    border-top: solid black 2px;
-    border-bottom: solid black 2px;
-    padding: 1.5rem;
-  }
-  .one,
-  .two {
-    border-right: solid black 2px;
-  }
-  .one,
-  .two,
-  .three {
-    width: 33.33vw;
-  }
-}
 /*GENERAL CLASSES*/
 .hidden {
   display: none;
+}
+a {
+  text-decoration: none;
+  font-family: var(--body--font);
+  color: black;
+}
+h4 {
+  font-family: var(--body--font);
+  font-weight: 600;
 }
 
 /*HEADER*/
@@ -91,7 +80,7 @@ header a {
 :root {
   --h1--font: "gopher", sans-serif;
   --body--font: "neue-haas-grotesk-display", sans-serif;
-  --bg-colour: #f6eff2;
+  --bg-colour: #f4eeed;
   --light--orange: #e8a473;
   --med--orange: #e07b53;
   --dark--orange: #a55546;
@@ -107,7 +96,9 @@ h2 {
   font-family: var(--body--font);
   font-weight: 700;
 }
-/* HOME PAGE */
+
+/*////////// HOME PAGE /////////*/
+
 main.homePage {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -141,21 +132,108 @@ section.threeLinks {
   grid-column: 1/3;
   display: flex;
   flex-direction: column;
+  width: 100vw;
 }
 section.threeLinks a.bigImg,
 section.threeLinks a.bigImg img {
-  width: 100vw;
   border-top: solid 1px black;
+  width: 100%;
 }
 section.threeLinks .smallImgs {
   display: flex;
 }
+section.threeLinks .smallImgs a {
+  border-top: solid 1.5px black;
+}
+section.threeLinks .smallImgs a.imgRight {
+  border-left: solid 1.5px black;
+}
 section.threeLinks .smallImgs img {
   width: 50vw;
-  border-bottom: solid 2px black;
-  border-top: solid 2px black;
-  border-right: solid 2px black;
 }
-section.threeLinks .smallImgs img.imgRight {
-  border-right: none;
+section.howWorks {
+  /* text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;*/
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem;
+}
+section.howWorks h4 {
+  border: solid 1px black;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+}
+/*.arrow {
+  background-image: url(down-arrow.svg);
+  height: 30px;
+  width: 25px;
+  background-repeat: no-repeat;
+}*/
+.stepOne,
+.stepTwo,
+.stepThree,
+.stepFour {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  text-align: center;
+}
+.stepOne p,
+.stepTwo p,
+.stepThree p,
+.stepFour p {
+  padding-bottom: 1.5rem;
+}
+.stepOne,
+.stepThree {
+  grid-column: 1;
+}
+.stepTwo {
+  grid-row: 2;
+}
+.stepTwo,
+.stepFour {
+  grid-column: 2;
+}
+.stepFour,
+.stepThree {
+  grid-row: 3;
+}
+.stepOne a,
+.stepTwo a {
+  border: solid 1px black;
+  background-color: white;
+  font-size: 14px;
+  padding: 0.5rem;
+  width: 8rem;
+  text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer_container {
+    display: flex;
+    flex-direction: row;
+  }
+  .footer_column {
+    border-top: solid black 2px;
+    border-bottom: solid black 2px;
+    padding: 1.5rem;
+  }
+  .one,
+  .two {
+    border-right: solid black 2px;
+  }
+  .one,
+  .two,
+  .three {
+    width: 33.33vw;
+  }
 }
