--- a/style.css
+++ b/style.css
@@ -125,8 +125,9 @@ a:active {
 main.homePage {
   display: grid;
   grid-template-columns: 50% 50%;
-  background-color: var(--bg-colour);
+  background-color: #f8f6f4;
 }
+/*hero image*/
 .heroImage {
   width: 100vw;
   height: auto;
@@ -144,6 +145,7 @@ main.homePage {
   text-decoration: none;
   color: black;
 }
+/* split three links*/
 section.threeLinks {
   grid-column: 1/3;
   display: flex;
@@ -174,6 +176,8 @@ section.threeLinks .smallImgs img {
   width: 100%;
   height: 100%;
 }
+/* how it works*/
+
 section.howWorks {
   grid-column: 1/3;
   padding: 3rem 3rem 6rem;
@@ -181,10 +185,12 @@ section.howWorks {
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 2rem;
+  gap: 2.5rem;
   row-gap: 5rem;
+  border-top: var(--line);
 }
 h2 {
+  display: none;
   grid-column: 1/3;
   text-align: center;
   padding-top: 6rem;
@@ -204,7 +210,7 @@ section.howWorks h4 {
 .stepFour {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   align-items: center;
 }
 .stepOne p,
@@ -237,7 +243,37 @@ section.howWorks h4 {
   width: 8rem;
   text-align: center;
 }
+.stepOne a:hover,
+.stepTwo a:hover {
+  color: var(--light--orange);
+}
+/* SCROLL TRY OUT */
 
+#scrollBanner {
+  grid-column: 1/3;
+  overflow: hidden;
+  background-color: white;
+  width: 100vw;
+  height: 4rem;
+}
+.scrollText {
+  z-index: -100;
+  width: 100vw;
+  font-family: var(--body--font);
+  color: var(--med--orange);
+  font-weight: 400;
+  line-height: 4rem;
+  font-size: 1.5rem;
+  animation: banner 20s linear infinite;
+}
+@keyframes banner {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 /* product list page */
 #mainProductL,
 #mainPP {
@@ -352,20 +388,56 @@ span {
 
   section.howWorks {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: start;
-    gap: 4rem;
+    gap: 0;
+    padding: 0;
+  }
+  main.homePage h2 {
+    display: none;
   }
   .arrow {
+    display: block;
+    border-left: var(--line);
+    height: 250px;
+  }
+  .stepFour,
+  .stepOne,
+  .stepThree,
+  .stepTwo {
+    align-self: flex-start;
+    padding-top: 2rem;
+  }
+  .stepOne {
+    padding-left: 1rem;
+  }
+  .stepFour {
+    padding-right: 1rem;
+  }
+  /*.arrow {
     display: block;
     background-image: url(svgs/Vector.svg);
     background-repeat: no-repeat;
     height: 25px;
     width: 25px;
     align-self: center;
-  }
+  }*/
   .howWorks p {
     padding-bottom: 3rem;
+  }
+
+  /*three links*/
+  section.threeLinks {
+    flex-direction: row;
+  }
+  section.threeLinks .smallImgs {
+    flex-direction: column;
+  }
+  section.threeLinks .smallImgs a {
+    width: 40vw;
+  }
+  section.threeLinks .smallImgs a.imgLeft {
+    border-left: var(--line);
   }
 
   /* PRODUCT PAGE */
