--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ header a {
   color: black;
 }
 
-header a:hover {
+header a:hover,
+a.addtoCart:hover {
   color: var(--light--orange);
 }
 
@@ -300,7 +301,7 @@ section.howWorks h4 {
 #mainPP {
   display: flex;
   flex-direction: column;
-  padding-top: 4rem;
+  padding-top: 6rem;
 }
 .shopPL {
   padding-left: 1rem;
@@ -310,7 +311,7 @@ section.howWorks h4 {
   padding-top: 2%;
 }
 .listimg {
-  border: var(--line);
+  border: solid 1.5px var(--light--orange);
   width: 100%;
 }
 #infoPL,
