--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ main.homePage {
 }
 /*hero image*/
 img.heroImage {
+  padding-top: 4rem;
   width: 100vw;
   border-bottom: solid 2px black;
 }
@@ -181,15 +182,13 @@ section.threeLinks {
 section.threeLinks a.bigImg {
   border-top: solid 1.5px black;
   width: 100vw;
+  height: 40vh;
   background-image: url(images/hero-image-1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-/*section.threeLinks a.bigImg img {
-  width: 100%;
-  height: 100%;
-}*/
+
 section.threeLinks .smallImgs {
   display: flex;
 }
@@ -220,12 +219,7 @@ section.howWorks {
   row-gap: 5rem;*/
   border-top: var(--line);
 }
-h2 {
-  display: none;
-  grid-column: 1/3;
-  text-align: center;
-  padding-top: 6rem;
-}
+
 section.howWorks h4 {
   font-size: 1.2rem;
   display: flex;
@@ -265,8 +259,9 @@ section.howWorks h4 {
 }
 .stepOne a,
 .stepTwo a {
-  border: solid 1px black;
-  background-color: white;
+  border: var(--line);
+  background-color: black;
+  color: white;
   font-size: 14px;
   padding: 0.5rem;
   width: 8rem;
@@ -274,22 +269,24 @@ section.howWorks h4 {
 }
 .stepOne a:hover,
 .stepTwo a:hover {
-  color: var(--light--orange);
+  color: black;
+  background-color: white;
+  transition: all 0.2s ease-in-out;
 }
 /* grid lines steps */
 .stepTwo {
   grid-row: 1;
-  padding: 3rem;
+  padding: 3rem 0 3rem;
   border-bottom: var(--line);
   border-left: var(--line);
 }
 .stepOne {
-  padding: 3rem;
+  padding: 3rem 0 3rem;
   border-bottom: var(--line);
 }
 .stepFour,
 .stepThree {
-  padding: 3rem 3rem 6rem;
+  padding: 3rem 0 6rem;
 }
 .stepFour {
   border-left: var(--line);
@@ -538,6 +535,9 @@ span {
   }
   section.threeLinks .smallImgs a.imgLeft {
     border-left: var(--line);
+  }
+  section.threeLinks a.bigImg {
+    height: auto;
   }
 
   /* PRODUCT PAGE */
