--- a/style.css
+++ b/style.css
@@ -109,10 +109,6 @@ header a:hover {
   padding-right: 0.6rem;
   cursor: pointer;
 }
-#menu:hover {
-  color: var(--light--orange);
-  transition: all 0.2s ease-in-out;
-}
 
 /* FOOTER */
 .footer_column ul {
@@ -411,10 +407,6 @@ span {
 
 /**CRATE SOAP PAGE**/
 
-.createSoap {
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
 /****** MEDIA QUERIES *************/
 @media only screen and (min-width: 958px) {
   /*HEADER DESKTOP */
@@ -524,6 +516,10 @@ span {
   .howWorks p {
     padding-bottom: 3rem;
   }
+  #menu:hover {
+    color: var(--light--orange);
+    transition: all 0.2s ease-in-out;
+  }
 
   /*three links*/
   section.threeLinks {
@@ -584,6 +580,27 @@ span {
   }
   #infoPL {
     grid-row: 2 / 3;
+  }
+  /*create soap page*/
+  .createSoap {
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+    padding-top: 4rem;
+  }
+  .createSoapImg {
+    grid-column: 2 / span 3;
+  }
+  .createSoapImg img {
+    width: 100%;
+    height: 100%;
+  }
+  .createInfo {
+    padding-top: 5rem;
+    line-height: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: 2rem;
   }
 }
 
