--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 }
 h1 {
   font-family: var(--h1--font);
+  font-weight: 400;
 }
 p {
   font-family: var(--body--font);
@@ -169,12 +170,12 @@ img.heroImage {
 }
 .heroText h1 {
   font-size: 2rem;
-  padding-bottom: 6rem;
+  padding-bottom: 7rem;
 }
 .heroText p {
   display: none;
   font-size: 1rem;
-  padding-bottom: 5rem;
+  padding-bottom: 8rem;
 }
 .heroText a {
   font-family: var(--body--font);
@@ -502,7 +503,7 @@ span {
   main.homePage .heroText p {
     display: block;
     font-size: 1.2rem;
-    padding-bottom: 15rem;
+    padding-bottom: 19rem;
   }
   main.homePage .heroText a {
     font-size: 1.5rem;
